<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <GVL Name="PCE_CmdState" Id="{127775c7-3828-4250-a22d-7441adfe5b37}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	///ctrl commands definitions
	///specific commands >200 - every command has to be a even number
	///ctrl specific states definitions
	cSUB_PAPERENTRY: INT := 300;
	cSUB_PAPERENTRYDelay: INT := 301;
	cSUB_PAPEREXIT: INT := 302;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>