<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_PCE_IO" Id="{f932e0f7-afae-4414-8668-cb7a9d70f073}">
    <Declaration><![CDATA[TYPE T_PCE_IO :
STRUCT
	In_bolInputSensor: REFERENCE TO BOOL;
	In_bolOutputSensor: REFERENCE TO BOOL;
	In_bolCornerSensor: REFERENCE TO BOOL;
	Out_bolVacuumValveIn: REFERENCE TO BOOL;
	Out_bolVacuumValveOut: REFERENCE TO BOOL;

	In_bolUmcIn_EmoOk: REFERENCE TO BOOL;	
	In_uinUmcIn_Status: REFERENCE TO UINT;
	In_uinUmcIn_ActualSpeed: REFERENCE TO UINT;
	In_uinUmcIn_SetSpeed: REFERENCE TO UINT;
	In_uinUmcIn_ECatState: REFERENCE TO UINT;
	In_strUmcIn_ECatNetId: REFERENCE TO AMSNETID;
	In_uinUmcIn_ECatPort: REFERENCE TO WORD;
	Out_uinUmcIn_Control: REFERENCE TO UINT;
	Out_uinUmcIn_SetSpeed: REFERENCE TO UINT;
	
	In_bolUmcOut_EmoOk: REFERENCE TO BOOL;
	In_uinUmcOut_Status: REFERENCE TO UINT;
	In_uinUmcOut_ActualSpeed: REFERENCE TO UINT;
	In_uinUmcOut_SetSpeed: REFERENCE TO UINT;
	In_uinUmcOut_ECatState: REFERENCE TO UINT;
	In_strUmcOut_ECatNetId: REFERENCE TO AMSNETID;
	In_uinUmcOut_ECatPort: REFERENCE TO WORD;
	Out_uinUmcOut_Control: REFERENCE TO UINT;
	Out_uinUmcOut_SetSpeed: REFERENCE TO UINT;
	
	In_bolVpc_VacuumSensor: REFERENCE TO BOOL;
	In_bolVpc_PumpOk: REFERENCE TO BOOL;
	Out_bolVpc_PumpOn: REFERENCE TO BOOL;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>